@@ -8,6 +8,10 @@ Changes - Apache::Test change logfile
 
 =item 1.01-dev
 
+improved support for 3rd party modules test configuration setup:
+automatically include 'use blib' in autogenerated t/TEST and add 'use
+Apache2' in the startup file for mod_perl 2.0. [Stas]
+
 new configuration option: -libmodperl [path/to/]mod_perl.so (so one
 can build several DSO objects, rename them, so several builds can
 co-exist under the same LIBEXECDIR and test them all. Mainly useful
